--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-rough-notation": "^1.0.2"
+    "react-rough-notation": "^1.0.2",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
