--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "idb-keyval": "^6.2.0",
     "next": "12.1.4",
+    "next-pwa": "^5.6.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-rough-notation": "^1.0.2",
-    "react-use": "^17.3.2"
+    "react-rough-notation": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
