--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "idb-keyval": "^6.2.0",
     "next": "12.1.4",
     "next-pwa": "^5.6.0",
+    "normalize.css": "^8.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-rough-notation": "^1.0.2"
