--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cobe": "^0.6.2",
     "idb-keyval": "^6.2.0",
     "next": "12.1.4",
     "next-pwa": "^5.6.0",
     "normalize.css": "^8.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-rough-notation": "^1.0.2"
+    "react-rough-notation": "^1.0.2",
+    "react-spring": "^9.5.4"
   },
   "devDependencies": {
     "eslint": "8.13.0",
